Fix: buttons covered in list view
Buttons getting cut off by fixed height in list view.  This fixes that.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -231,7 +231,7 @@ NAV UL LI UL LI:hover
   margin: 4px;
   padding: 1em 0 0 1em;
   letter-spacing: .1em;
-  height: 2em;
+  min-height: 2em;
   overflow: hidden;
 }
 
